kube-exercises/hw3/answer_exercise_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels: 
    app: nginx-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
        - image: nginx:1.19.4
          name: nginx-server
          imagePullPolicy: "Always"
          resources:
            requests:
              memory: "128Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu: "20m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
