kube-exercises/hw3/answer_exercise_1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
