kube-exercises/hw3/answer_exercise_1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: emili-roures-vives.students.lasalle.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: nginx-service
              port: 
                number: 80
